--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>G3 Architects</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:ital,wght@0,400;0,600;0,700;0,800;1,300;1,400&family=Work+Sans:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet">
    <link rel="stylesheet" href="styles/architect.css">
 </head>
 
 <body>
    <header>
-
+      <nav>
+         <h3 class="nav-title">G3 Architects</h3>
+         <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact us</a></li>
+            <li><a href="">Login</a></li>
+         </ul>
+      </nav>
    </header>
    <main>
 
