--- a/index.html
+++ b/index.html
@@ -36,7 +36,23 @@
       </div>
    </header>
    <main>
-
+      <section class="team-section">
+         <div class="team-container">
+            <div class="team-img">
+               <img src="images/team1.png" alt="">
+               <img src="images/team2.png" alt="">
+               <img src="images/team3.png" alt="">
+               <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content">
+               <h2> <span class="quick-list">Quick list</span> of Our <span class="team-feature">Features</span></h2>
+               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                  alteration in some form,
+                  by injected humour, or randomised words which don't look even</p>
+               <button class="btn-primary">Explore More</button>
+            </div>
+         </div>
+      </section>
    </main>
    <footer>
 
