--- a/index.html
+++ b/index.html
@@ -53,6 +53,48 @@
             </div>
          </div>
       </section>
+
+      <section class="features">
+         <div class="feature-content">
+            <h3>Features you will love & enjoy</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+               alteration in some form,
+               by injected humour, or randomised words which don't look even</p>
+            <div class="feature-card-container">
+               <div class="card">
+                  <h4>Desktop & Mobile Version</h4>
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                     alteration in some form,
+                     by injected humour, or randomized...........</p>
+               </div>
+               <div class="card">
+                  <h4>Desktop & Mobile Version</h4>
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                     alteration in some form,
+                     by injected humour, or randomized...........</p>
+               </div>
+               <div class="card">
+                  <h4>Desktop & Mobile Version</h4>
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                     alteration in some form,
+                     by injected humour, or randomized...........</p>
+               </div>
+               <div class="card">
+                  <h4>Desktop & Mobile Version</h4>
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                     alteration in some form,
+                     by injected humour, or randomized...........</p>
+               </div>
+            </div>
+         </div>
+         <div class="feature-img">
+            <img src="images/architect.png" alt="">
+            <div class="experience-badge">
+               <h3>10+ year</h3>
+               <p>Experience</p>
+            </div>
+         </div>
+      </section>
    </main>
    <footer>
 
