--- a/index.html
+++ b/index.html
@@ -95,6 +95,40 @@
             </div>
          </div>
       </section>
+
+      <section>
+         <div class="facts-content">
+            <h3 class="facts-title">Some Facts</h3>
+            <p class="facts-desc">There are many variations of passages of Lorem Ipsum available, but the majority have
+               suffered alteration.
+            </p>
+         </div>
+         <div class="facts-card-container">
+            <div class="card">
+               <img src="images/icons/ribon.png" alt="">
+               <h3 class="card-title">54</h3>
+               <p class="card-desc">Awards Winnings</p>
+            </div>
+            <div class="card">
+               <img src="images/icons/customers.png" alt="">
+               <h3 class="card-title">590</h3>
+               <p class="card-desc">Clients Worked</p>
+            </div>
+            <div class="card">
+               <img src="images/icons/email.png" alt="">
+
+               <h3 class="card-title">20342</h3>
+               <p class="card-desc">E-mails recieved</p>
+            </div>
+            <div class="card">
+               <img src="images/icons/projects.png" alt="">
+
+               <h3 class="card-title">2830</h3>
+               <p class="card-desc">Projects Finished</p>
+            </div>
+
+         </div>
+      </section>
    </main>
    <footer>
 
