added sponsors section

--- a/index.html
+++ b/index.html
@@ -129,6 +129,22 @@
 
          </div>
       </section>
+
+      <section>
+         <div class="sponsors-content">
+            <h3 class="sponsor-title">Our Sponsors</h3>
+            <p class="sponsor-desc">
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium numquam veniam vero molestiae quas
+               aspernatur.
+            </p>
+         </div>
+         <div class="sponsor-img-container">
+            <div class="sponsor-img"><img src="images/sponsors/amazon.png" alt=""></div>
+            <div class="sponsor-img"><img src="images/sponsors/figma.png" alt=""></div>
+            <div class="sponsor-img"><img src="images/sponsors/google.png" alt=""></div>
+            <div class="sponsor-img"><img src="images/sponsors/spotify.png" alt=""></div>
+         </div>
+      </section>
    </main>
    <footer>
 
