--- a/index.html
+++ b/index.html
@@ -146,8 +146,9 @@
          </div>
       </section>
    </main>
-   <footer>
 
+   <footer>
+      <h3>All rights reserved copyright@2023 startup landing page design</h3>
    </footer>
 </body>
 
